# Project-Y

./: .gitignore  README.md  devlog.md
Interfaces/: Device.h
Source/: main.cpp
Source/Arduino/: Arduino.h
Source/Logic/: VisualizerLogic.h
Source/Objects/: FTTReader.h  LED.h  LEDGrid.h
res/: details.md  devlog.md
src/: CMakeLists.txt  main.cpp
src/Arduino/: Arduino.cpp  Arduino.h  CMakeLists.txt
src/Interfaces/: AudioInput.h  CMakeLists.txt  Device.h  LEDDisplay.h  PatternStrategy.h
src/Logic/: CMakeLists.txt  VisualizerLogic.cpp  VisualizerLogic.h
src/Objects/: CMakeLists.txt  EqualizerPattern.cpp  EqualizerPattern.h  FTTReader.cpp  FTTReader.h  FillLilacPattern.cpp  FillLilacPattern.h  LED.cpp  LED.h  LEDDisplay.cpp  LEDDisplay.h  LEDGrid.cpp  LEDGrid.h  LEDStrip.cpp  LEDStrip.h  MicInput.h  SolidPattern.cpp  SolidPattern.h
tests/Unit/: CMakeLists.txt  testFTTReader.cpp  testLED.cpp  testLEDGrid.cpp  testLEDStrip.cpp
